--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@
 html, body {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -28,6 +29,7 @@ body {
   background-color: rgb(var(--background-rgb));
   line-height: 1;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 img, picture, video, canvas, svg {
@@ -64,4 +66,10 @@ header h1 {
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
+}
+
+/* Prevent horizontal scrolling on all major containers */
+main, [class*="max-w-"] {
+  max-width: 100vw;
+  box-sizing: border-box;
 }
